hw09/y.output
Terminals unused in grammar

   LABEL
   GOTO
   IFTRUE
   IFFALSE


State 54 conflicts: 1 shift/reduce


Grammar

    0 $accept: lines $end

    1 lines: lines stmts '\n'
    2      | lines error '\n'
    3      | /* empty */

    4 stmts: IF '(' expr ')' stmts
    5      | IF '(' expr ')' stmts ELSE stmts
    6      | ident '=' expr ';'

    7 expr: expr '+' expr
    8     | expr '-' expr
    9     | expr '*' expr
   10     | expr '/' expr
   11     | expr '|' expr
   12     | expr '^' expr
   13     | expr '&' expr
   14     | expr '%' expr
   15     | '(' expr ')'
   16     | '~' expr
   17     | '-' expr
   18     | number
   19     | ident
   20     | expr LE expr
   21     | expr GE expr
   22     | expr EQ expr
   23     | expr NE expr
   24     | expr '<' expr
   25     | expr '>' expr

   26 number: CONSTANT

   27 ident: IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 1 2
'%' (37) 14
'&' (38) 13
'(' (40) 4 5 15
')' (41) 4 5 15
'*' (42) 9
'+' (43) 7
'-' (45) 8 17
'/' (47) 10
';' (59) 6
'<' (60) 24
'=' (61) 6
'>' (62) 25
'^' (94) 12
'|' (124) 11
'~' (126) 16
error (256) 2
CONSTANT (258) 26
IDENTIFIER (259) 27
IF (260) 4 5
ELSE (261) 5
LE (262) 20
GE (263) 21
EQ (264) 22
NE (265) 23
LABEL (266)
GOTO (267)
IFTRUE (268)
IFFALSE (269)
UMINUS (270)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
lines (33)
    on left: 1 2 3, on right: 0 1 2
stmts (34)
    on left: 4 5 6, on right: 1 4 5
expr (35)
    on left: 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25,
    on right: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 20 21 22 23 24 25
number (36)
    on left: 26, on right: 18
ident (37)
    on left: 27, on right: 6 19


State 0

    0 $accept: . lines $end

    $default  reduce using rule 3 (lines)

    lines  go to state 1


State 1

    0 $accept: lines . $end
    1 lines: lines . stmts '\n'
    2      | lines . error '\n'

    $end        shift, and go to state 2
    error       shift, and go to state 3
    IDENTIFIER  shift, and go to state 4
    IF          shift, and go to state 5

    stmts  go to state 6
    ident  go to state 7


State 2

    0 $accept: lines $end .

    $default  accept


State 3

    2 lines: lines error . '\n'

    '\n'  shift, and go to state 8


State 4

   27 ident: IDENTIFIER .

    $default  reduce using rule 27 (ident)


State 5

    4 stmts: IF . '(' expr ')' stmts
    5      | IF . '(' expr ')' stmts ELSE stmts

    '('  shift, and go to state 9


State 6

    1 lines: lines stmts . '\n'

    '\n'  shift, and go to state 10


State 7

    6 stmts: ident . '=' expr ';'

    '='  shift, and go to state 11


State 8

    2 lines: lines error '\n' .

    $default  reduce using rule 2 (lines)


State 9

    4 stmts: IF '(' . expr ')' stmts
    5      | IF '(' . expr ')' stmts ELSE stmts

    CONSTANT    shift, and go to state 12
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 13
    '~'         shift, and go to state 14
    '('         shift, and go to state 15

    expr    go to state 16
    number  go to state 17
    ident   go to state 18


State 10

    1 lines: lines stmts '\n' .

    $default  reduce using rule 1 (lines)


State 11

    6 stmts: ident '=' . expr ';'

    CONSTANT    shift, and go to state 12
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 13
    '~'         shift, and go to state 14
    '('         shift, and go to state 15

    expr    go to state 19
    number  go to state 17
    ident   go to state 18


State 12

   26 number: CONSTANT .

    $default  reduce using rule 26 (number)


State 13

   17 expr: '-' . expr

    CONSTANT    shift, and go to state 12
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 13
    '~'         shift, and go to state 14
    '('         shift, and go to state 15

    expr    go to state 20
    number  go to state 17
    ident   go to state 18


State 14

   16 expr: '~' . expr

    CONSTANT    shift, and go to state 12
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 13
    '~'         shift, and go to state 14
    '('         shift, and go to state 15

    expr    go to state 21
    number  go to state 17
    ident   go to state 18


State 15

   15 expr: '(' . expr ')'

    CONSTANT    shift, and go to state 12
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 13
    '~'         shift, and go to state 14
    '('         shift, and go to state 15

    expr    go to state 22
    number  go to state 17
    ident   go to state 18


State 16

    4 stmts: IF '(' expr . ')' stmts
    5      | IF '(' expr . ')' stmts ELSE stmts
    7 expr: expr . '+' expr
    8     | expr . '-' expr
    9     | expr . '*' expr
   10     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr
   20     | expr . LE expr
   21     | expr . GE expr
   22     | expr . EQ expr
   23     | expr . NE expr
   24     | expr . '<' expr
   25     | expr . '>' expr

    LE   shift, and go to state 23
    GE   shift, and go to state 24
    EQ   shift, and go to state 25
    NE   shift, and go to state 26
    '|'  shift, and go to state 27
    '^'  shift, and go to state 28
    '&'  shift, and go to state 29
    '<'  shift, and go to state 30
    '>'  shift, and go to state 31
    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36
    ')'  shift, and go to state 37


State 17

   18 expr: number .

    $default  reduce using rule 18 (expr)


State 18

   19 expr: ident .

    $default  reduce using rule 19 (expr)


State 19

    6 stmts: ident '=' expr . ';'
    7 expr: expr . '+' expr
    8     | expr . '-' expr
    9     | expr . '*' expr
   10     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr
   20     | expr . LE expr
   21     | expr . GE expr
   22     | expr . EQ expr
   23     | expr . NE expr
   24     | expr . '<' expr
   25     | expr . '>' expr

    LE   shift, and go to state 23
    GE   shift, and go to state 24
    EQ   shift, and go to state 25
    NE   shift, and go to state 26
    '|'  shift, and go to state 27
    '^'  shift, and go to state 28
    '&'  shift, and go to state 29
    '<'  shift, and go to state 30
    '>'  shift, and go to state 31
    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36
    ';'  shift, and go to state 38


State 20

    7 expr: expr . '+' expr
    8     | expr . '-' expr
    9     | expr . '*' expr
   10     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr
   17     | '-' expr .
   20     | expr . LE expr
   21     | expr . GE expr
   22     | expr . EQ expr
   23     | expr . NE expr
   24     | expr . '<' expr
   25     | expr . '>' expr

    $default  reduce using rule 17 (expr)


State 21

    7 expr: expr . '+' expr
    8     | expr . '-' expr
    9     | expr . '*' expr
   10     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr
   16     | '~' expr .
   20     | expr . LE expr
   21     | expr . GE expr
   22     | expr . EQ expr
   23     | expr . NE expr
   24     | expr . '<' expr
   25     | expr . '>' expr

    $default  reduce using rule 16 (expr)


State 22

    7 expr: expr . '+' expr
    8     | expr . '-' expr
    9     | expr . '*' expr
   10     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr
   15     | '(' expr . ')'
   20     | expr . LE expr
   21     | expr . GE expr
   22     | expr . EQ expr
   23     | expr . NE expr
   24     | expr . '<' expr
   25     | expr . '>' expr

    LE   shift, and go to state 23
    GE   shift, and go to state 24
    EQ   shift, and go to state 25
    NE   shift, and go to state 26
    '|'  shift, and go to state 27
    '^'  shift, and go to state 28
    '&'  shift, and go to state 29
    '<'  shift, and go to state 30
    '>'  shift, and go to state 31
    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36
    ')'  shift, and go to state 39


State 23

   20 expr: expr LE . expr

    CONSTANT    shift, and go to state 12
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 13
    '~'         shift, and go to state 14
    '('         shift, and go to state 15

    expr    go to state 40
    number  go to state 17
    ident   go to state 18


State 24

   21 expr: expr GE . expr

    CONSTANT    shift, and go to state 12
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 13
    '~'         shift, and go to state 14
    '('         shift, and go to state 15

    expr    go to state 41
    number  go to state 17
    ident   go to state 18


State 25

   22 expr: expr EQ . expr

    CONSTANT    shift, and go to state 12
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 13
    '~'         shift, and go to state 14
    '('         shift, and go to state 15

    expr    go to state 42
    number  go to state 17
    ident   go to state 18


State 26

   23 expr: expr NE . expr

    CONSTANT    shift, and go to state 12
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 13
    '~'         shift, and go to state 14
    '('         shift, and go to state 15

    expr    go to state 43
    number  go to state 17
    ident   go to state 18


State 27

   11 expr: expr '|' . expr

    CONSTANT    shift, and go to state 12
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 13
    '~'         shift, and go to state 14
    '('         shift, and go to state 15

    expr    go to state 44
    number  go to state 17
    ident   go to state 18


State 28

   12 expr: expr '^' . expr

    CONSTANT    shift, and go to state 12
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 13
    '~'         shift, and go to state 14
    '('         shift, and go to state 15

    expr    go to state 45
    number  go to state 17
    ident   go to state 18


State 29

   13 expr: expr '&' . expr

    CONSTANT    shift, and go to state 12
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 13
    '~'         shift, and go to state 14
    '('         shift, and go to state 15

    expr    go to state 46
    number  go to state 17
    ident   go to state 18


State 30

   24 expr: expr '<' . expr

    CONSTANT    shift, and go to state 12
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 13
    '~'         shift, and go to state 14
    '('         shift, and go to state 15

    expr    go to state 47
    number  go to state 17
    ident   go to state 18


State 31

   25 expr: expr '>' . expr

    CONSTANT    shift, and go to state 12
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 13
    '~'         shift, and go to state 14
    '('         shift, and go to state 15

    expr    go to state 48
    number  go to state 17
    ident   go to state 18


State 32

    7 expr: expr '+' . expr

    CONSTANT    shift, and go to state 12
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 13
    '~'         shift, and go to state 14
    '('         shift, and go to state 15

    expr    go to state 49
    number  go to state 17
    ident   go to state 18


State 33

    8 expr: expr '-' . expr

    CONSTANT    shift, and go to state 12
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 13
    '~'         shift, and go to state 14
    '('         shift, and go to state 15

    expr    go to state 50
    number  go to state 17
    ident   go to state 18


State 34

    9 expr: expr '*' . expr

    CONSTANT    shift, and go to state 12
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 13
    '~'         shift, and go to state 14
    '('         shift, and go to state 15

    expr    go to state 51
    number  go to state 17
    ident   go to state 18


State 35

   10 expr: expr '/' . expr

    CONSTANT    shift, and go to state 12
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 13
    '~'         shift, and go to state 14
    '('         shift, and go to state 15

    expr    go to state 52
    number  go to state 17
    ident   go to state 18


State 36

   14 expr: expr '%' . expr

    CONSTANT    shift, and go to state 12
    IDENTIFIER  shift, and go to state 4
    '-'         shift, and go to state 13
    '~'         shift, and go to state 14
    '('         shift, and go to state 15

    expr    go to state 53
    number  go to state 17
    ident   go to state 18


State 37

    4 stmts: IF '(' expr ')' . stmts
    5      | IF '(' expr ')' . stmts ELSE stmts

    IDENTIFIER  shift, and go to state 4
    IF          shift, and go to state 5

    stmts  go to state 54
    ident  go to state 7


State 38

    6 stmts: ident '=' expr ';' .

    $default  reduce using rule 6 (stmts)


State 39

   15 expr: '(' expr ')' .

    $default  reduce using rule 15 (expr)


State 40

    7 expr: expr . '+' expr
    8     | expr . '-' expr
    9     | expr . '*' expr
   10     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr
   20     | expr . LE expr
   20     | expr LE expr .
   21     | expr . GE expr
   22     | expr . EQ expr
   23     | expr . NE expr
   24     | expr . '<' expr
   25     | expr . '>' expr

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36

    $default  reduce using rule 20 (expr)


State 41

    7 expr: expr . '+' expr
    8     | expr . '-' expr
    9     | expr . '*' expr
   10     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr
   20     | expr . LE expr
   21     | expr . GE expr
   21     | expr GE expr .
   22     | expr . EQ expr
   23     | expr . NE expr
   24     | expr . '<' expr
   25     | expr . '>' expr

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36

    $default  reduce using rule 21 (expr)


State 42

    7 expr: expr . '+' expr
    8     | expr . '-' expr
    9     | expr . '*' expr
   10     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr
   20     | expr . LE expr
   21     | expr . GE expr
   22     | expr . EQ expr
   22     | expr EQ expr .
   23     | expr . NE expr
   24     | expr . '<' expr
   25     | expr . '>' expr

    LE   shift, and go to state 23
    GE   shift, and go to state 24
    '<'  shift, and go to state 30
    '>'  shift, and go to state 31
    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36

    $default  reduce using rule 22 (expr)


State 43

    7 expr: expr . '+' expr
    8     | expr . '-' expr
    9     | expr . '*' expr
   10     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr
   20     | expr . LE expr
   21     | expr . GE expr
   22     | expr . EQ expr
   23     | expr . NE expr
   23     | expr NE expr .
   24     | expr . '<' expr
   25     | expr . '>' expr

    LE   shift, and go to state 23
    GE   shift, and go to state 24
    '<'  shift, and go to state 30
    '>'  shift, and go to state 31
    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36

    $default  reduce using rule 23 (expr)


State 44

    7 expr: expr . '+' expr
    8     | expr . '-' expr
    9     | expr . '*' expr
   10     | expr . '/' expr
   11     | expr . '|' expr
   11     | expr '|' expr .
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr
   20     | expr . LE expr
   21     | expr . GE expr
   22     | expr . EQ expr
   23     | expr . NE expr
   24     | expr . '<' expr
   25     | expr . '>' expr

    LE   shift, and go to state 23
    GE   shift, and go to state 24
    EQ   shift, and go to state 25
    NE   shift, and go to state 26
    '^'  shift, and go to state 28
    '&'  shift, and go to state 29
    '<'  shift, and go to state 30
    '>'  shift, and go to state 31
    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36

    $default  reduce using rule 11 (expr)


State 45

    7 expr: expr . '+' expr
    8     | expr . '-' expr
    9     | expr . '*' expr
   10     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   12     | expr '^' expr .
   13     | expr . '&' expr
   14     | expr . '%' expr
   20     | expr . LE expr
   21     | expr . GE expr
   22     | expr . EQ expr
   23     | expr . NE expr
   24     | expr . '<' expr
   25     | expr . '>' expr

    LE   shift, and go to state 23
    GE   shift, and go to state 24
    EQ   shift, and go to state 25
    NE   shift, and go to state 26
    '&'  shift, and go to state 29
    '<'  shift, and go to state 30
    '>'  shift, and go to state 31
    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36

    $default  reduce using rule 12 (expr)


State 46

    7 expr: expr . '+' expr
    8     | expr . '-' expr
    9     | expr . '*' expr
   10     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   13     | expr '&' expr .
   14     | expr . '%' expr
   20     | expr . LE expr
   21     | expr . GE expr
   22     | expr . EQ expr
   23     | expr . NE expr
   24     | expr . '<' expr
   25     | expr . '>' expr

    LE   shift, and go to state 23
    GE   shift, and go to state 24
    EQ   shift, and go to state 25
    NE   shift, and go to state 26
    '<'  shift, and go to state 30
    '>'  shift, and go to state 31
    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36

    $default  reduce using rule 13 (expr)


State 47

    7 expr: expr . '+' expr
    8     | expr . '-' expr
    9     | expr . '*' expr
   10     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr
   20     | expr . LE expr
   21     | expr . GE expr
   22     | expr . EQ expr
   23     | expr . NE expr
   24     | expr . '<' expr
   24     | expr '<' expr .
   25     | expr . '>' expr

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36

    $default  reduce using rule 24 (expr)


State 48

    7 expr: expr . '+' expr
    8     | expr . '-' expr
    9     | expr . '*' expr
   10     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr
   20     | expr . LE expr
   21     | expr . GE expr
   22     | expr . EQ expr
   23     | expr . NE expr
   24     | expr . '<' expr
   25     | expr . '>' expr
   25     | expr '>' expr .

    '+'  shift, and go to state 32
    '-'  shift, and go to state 33
    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36

    $default  reduce using rule 25 (expr)


State 49

    7 expr: expr . '+' expr
    7     | expr '+' expr .
    8     | expr . '-' expr
    9     | expr . '*' expr
   10     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr
   20     | expr . LE expr
   21     | expr . GE expr
   22     | expr . EQ expr
   23     | expr . NE expr
   24     | expr . '<' expr
   25     | expr . '>' expr

    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36

    $default  reduce using rule 7 (expr)


State 50

    7 expr: expr . '+' expr
    8     | expr . '-' expr
    8     | expr '-' expr .
    9     | expr . '*' expr
   10     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr
   20     | expr . LE expr
   21     | expr . GE expr
   22     | expr . EQ expr
   23     | expr . NE expr
   24     | expr . '<' expr
   25     | expr . '>' expr

    '*'  shift, and go to state 34
    '/'  shift, and go to state 35
    '%'  shift, and go to state 36

    $default  reduce using rule 8 (expr)


State 51

    7 expr: expr . '+' expr
    8     | expr . '-' expr
    9     | expr . '*' expr
    9     | expr '*' expr .
   10     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr
   20     | expr . LE expr
   21     | expr . GE expr
   22     | expr . EQ expr
   23     | expr . NE expr
   24     | expr . '<' expr
   25     | expr . '>' expr

    $default  reduce using rule 9 (expr)


State 52

    7 expr: expr . '+' expr
    8     | expr . '-' expr
    9     | expr . '*' expr
   10     | expr . '/' expr
   10     | expr '/' expr .
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr
   20     | expr . LE expr
   21     | expr . GE expr
   22     | expr . EQ expr
   23     | expr . NE expr
   24     | expr . '<' expr
   25     | expr . '>' expr

    $default  reduce using rule 10 (expr)


State 53

    7 expr: expr . '+' expr
    8     | expr . '-' expr
    9     | expr . '*' expr
   10     | expr . '/' expr
   11     | expr . '|' expr
   12     | expr . '^' expr
   13     | expr . '&' expr
   14     | expr . '%' expr
   14     | expr '%' expr .
   20     | expr . LE expr
   21     | expr . GE expr
   22     | expr . EQ expr
   23     | expr . NE expr
   24     | expr . '<' expr
   25     | expr . '>' expr

    $default  reduce using rule 14 (expr)


State 54

    4 stmts: IF '(' expr ')' stmts .
    5      | IF '(' expr ')' stmts . ELSE stmts

    ELSE  shift, and go to state 55

    ELSE      [reduce using rule 4 (stmts)]
    $default  reduce using rule 4 (stmts)


State 55

    5 stmts: IF '(' expr ')' stmts ELSE . stmts

    IDENTIFIER  shift, and go to state 4
    IF          shift, and go to state 5

    stmts  go to state 56
    ident  go to state 7


State 56

    5 stmts: IF '(' expr ')' stmts ELSE stmts .

    $default  reduce using rule 5 (stmts)
